--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.18",
+        "phpspec/phpspec": "^7.0",
         "phpstan/phpstan": "^0.12.85"
     },
     "config": {
