--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -3,6 +3,7 @@
 $finder = PhpCsFixer\Finder::create()
     ->in(__DIR__ . '/src')
     ->in(__DIR__ . '/spec')
+    ->in(__DIR__ . '/tests')
 ;
 
 return PhpCsFixer\Config::create()
